# experimental-modules

./: CONTRIBUTING.md  LICENSE  README.md
modules/authentication/: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  create-aar.sh  create-xcframework.sh
modules/authentication/.claude/: settings.local.json
modules/authentication/examples/: README.md  basic.rs  refresh.rs  refresh_expired.rs  test_auto_auth.rs  test_refresh_expiry.rs  tui.rs
modules/authentication/pkg/expo/: .gitignore  README.md  expo-module.config.json  package-lock.json  package.json
modules/authentication/pkg/expo/android/: build.gradle
modules/authentication/pkg/expo/android/src/main/java/expo/modules/aukilabsexpoauthentication/: AukilabsExpoAuthenticationModule.kt  AuthenticationClientWrapper.kt
modules/authentication/pkg/expo/android/src/main/kotlin/com/aukilabs/authentication/: authentication.kt
modules/authentication/pkg/expo/example/: App.tsx  app.json  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
modules/authentication/pkg/expo/ios/: AukilabsExpoAuthentication.podspec  AukilabsExpoAuthenticationModule.swift  AukilabsExpoAuthenticationView.swift  AuthenticationClient.swift  authentication.swift  authenticationFFI.h  authenticationFFI.modulemap
modules/authentication/pkg/expo/src/: AukilabsExpoAuthentication.types.ts  AukilabsExpoAuthenticationModule.ts  AukilabsExpoAuthenticationModule.web.ts  index.ts
modules/authentication/pkg/javascript/: .gitignore  README.md  package-lock.json  package.json
modules/authentication/pkg/javascript/examples/: basic-appkey-appsecret.js  basic.js  test_auto_auth.js  test_credential_clearing.js  test_refresh.js  test_refresh_expired.js
modules/authentication/pkg/javascript/src/: index.metro.ts  index.ts
modules/authentication/pkg/python/: .gitignore  README.md  pyproject.toml  setup.py  validate_build.py  zip.py
modules/authentication/pkg/python/examples/: basic.py  example_async.py  test_auto_auth.py  test_multi_domain.py  test_refresh.py
modules/authentication/pkg/python/src/: __init__.py  client.py
modules/authentication/src/: client.rs  jwt.rs  lib.rs  state.rs  types.rs
